--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
+body {
+  background: #efefef;
+  margin: 0;
+  padding: 0;
+  font-family: Helvetica, Arial, Verdana;
+}
+
+h1 {
+  color: #888888;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  color: #666666;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#wrapper {
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#thumbnails {
+  position: relative;
+  display: block;
+  display:flex;
+  flex-wrap:wrap;
+
 }
 
-.App-link {
-  color: #61dafb;
+#bigimage {
+  height: 300px;
+  width: 100%;
+  object-fit:cover;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.thumb {
+  flex:1;
+  margin: 5px;
+  height: 100px;
+  width: 100px;
+  display: block;
+  cursor: pointer;
+  object-fit:cover;
 }
